# russian_stt_text_normalization

./: .gitignore  MANIFEST.in  README.md  UPGRADE.md  convert_model.py  pyproject.toml
russian_stt_text_normalization/: __init__.py  normalizer.py
